<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd"> 
    <modelVersion>4.0.0</modelVersion> 
    
    <groupId>com.alcateia</groupId> 
    <artifactId>workshop-javafx-jdbc</artifactId> 
    <version>1.0-SNAPSHOT</version> 
    
    <properties> 
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> 
        <maven.compiler.source>25</maven.compiler.source> 
        <maven.compiler.target>25</maven.compiler.target> 
    </properties> 
    
    <dependencies> 
        <!-- Driver MySQL Corrigido para a versão 9.7.0 -->
        <dependency> 
            <groupId>com.mysql</groupId> 
            <artifactId>mysql-connector-j</artifactId> 
            <version>9.7.0</version> 
        </dependency> 
        
        <!-- JavaFX Controls -->
        <dependency> 
            <groupId>org.openjfx</groupId> 
            <artifactId>javafx-controls</artifactId> 
            <version>25.0.3</version> 
        </dependency> 
        
        <!-- JavaFX FXML -->
        <dependency> 
            <groupId>org.openjfx</groupId> 
            <artifactId>javafx-fxml</artifactId> 
            <version>25.0.3</version> 
        </dependency> 
    </dependencies> 
    
    <build> 
        <plugins> 
            <!-- Plugin do Compilador Java -->
            <plugin> 
                <groupId>org.apache.maven.plugins</groupId> 
                <artifactId>maven-compiler-plugin</artifactId> 
                <version>3.13.0</version> 
                <configuration> 
                    <release>25</release> 
                </configuration> 
            </plugin> 
            
            <!-- Plugin do JavaFX -->
            <plugin> 
                <groupId>org.openjfx</groupId> 
                <artifactId>javafx-maven-plugin</artifactId> 
                <version>0.0.8</version> 
                <configuration> 
                    <!-- Corrigido de com.alcateia/com.alcateia.App para o formato padrão de pontos -->
                    <mainClass>com.alcateia.App</mainClass> 
                    <options> 
                        <option>--enable-native-access=javafx.graphics,com.alcateia</option> 
                    </options> 
                </configuration> 
                <executions> 
                    <execution> 
                        <id>default-cli</id> 
                        <configuration> 
                            <mainClass>com.alcateia.App</mainClass> 
                        </configuration> 
                    </execution> 
                </executions> 
            </plugin> 
        </plugins> 
    </build> 
</project>
